--- a/package.json
+++ b/package.json
@@ -30,6 +30,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ],
-    "homepage": "https://github.com/mfxod/clicky-game"
+    "homepage": "https://github.io/mfxod/clicky-game"
   }
 }
