--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://mfxod.github.io/clicky-game",
   "name": "clicky-game",
   "version": "0.1.0",
   "private": true,
@@ -29,7 +30,6 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
-    ],
-    "homepage": "https://mfxod/github.io/clicky-game"
+    ]
   }
 }
